Add release.middle entrypoint to raise if tag already exists or version contains dev marker

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,4 +1,7 @@
 [buildout]
+
+develop = .
+
 eggs =
   flake8
   pep8
@@ -45,6 +48,7 @@ eggs = ${scripts:eggs}
 [releaser]
 recipe = zc.recipe.egg
 eggs = zest.releaser
+       python.tools
        check-manifest
 
 [scripts]
