--- a/base_versions.cfg
+++ b/base_versions.cfg
@@ -1,22 +1,8 @@
 [versions]
-bobtemplates.kotti = 0.2a1
-bobtemplates.plone = 1.0.1
-check-manifest = 0.25
-collective.recipe.omelette = 0.15
-collective.recipe.template = 1.13
-flake8 = 2.5.4
-i18ndude = 3.3.3
-lingua = 3.8
+flake8 = 3.5.0
+autopep8 = 1.3.4
+i18ndude = 4.3
 mr.bob = 0.1.2
-pep8 = 1.7.0
-pep8-naming = 0.3.3
-pyflakes = 0.8.1
-pylint = 1.4.4
-rope = 0.10.2
-setuptools = 17.1.1
-templer.buildout = 1.0b1
-templer.core = 1.0b4
-templer.plone = 1.0b4
-templer.zope = 1.0b2
-zc.buildout = 2.3.1
-zc.recipe.egg = 2.0.2
+bobtemplates.plone = 2.0
+check-manifest = 0.36
+zest.releaser = 6.13.3
