--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,14 +1,7 @@
 [buildout]
-
+extensions = mr.developer
+sources-dir = devel
 develop = .
-
-eggs =
-  flake8
-  pep8
-  pep8-naming
-  pyflakes
-  pylint
-  rope
 
 extends =
     base_versions.cfg
@@ -16,52 +9,44 @@ extends =
     versions.cfg
 
 parts =
-  i18n
-  mrbob
-  omelette
-  releaser
-  scripts
-  templer
-  ${buildout:links-parts}
+    lint
+    i18n
+    mrbob
+    releaser
+    manifest
+    ${buildout:links-parts}
 
 show-picked-versions = true
 
 update-versions-file = versions.cfg
 
+[lint]
+recipe = zc.recipe.egg
+eggs =
+    flake8
+    autopep8
+
 [i18n]
 recipe = zc.recipe.egg
 eggs =
     i18ndude
-    lingua
 
 [mrbob]
 recipe = zc.recipe.egg
 eggs =
     mr.bob
     bobtemplates.plone
-    bobtemplates.kotti
-
-[omelette]
-recipe = collective.recipe.omelette
-eggs = ${scripts:eggs}
 
 [releaser]
 recipe = zc.recipe.egg
-eggs = zest.releaser
-       python.tools
-       check-manifest
+eggs =
+    zest.releaser[recommended]
+    python.tools
 
-[scripts]
-recipe = zc.recipe.egg:scripts
-eggs = ${buildout:eggs}
-
-[templer]
+[manifest]
 recipe = zc.recipe.egg
 eggs =
-    templer.buildout
-    templer.core
-    templer.plone
-    templer.zope
+    check-manifest
 
 [install-links]
 prefix = /opt/local
