Add i18ndude.autotranslate and ignore some errors

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,7 +9,9 @@ extends =
     versions.cfg
 
 parts =
-    lint
+    autotranslate
+    flake8
+    autopep8
     i18n
     mrbob
     releaser
@@ -20,11 +22,30 @@ show-picked-versions = true
 
 update-versions-file = versions.cfg
 
-[lint]
+auto-checkout = i18ndude.autotranslate
+
+[autotranslate]
+recipe = zc.recipe.egg
+eggs =
+    i18ndude.autotranslate
+
+[flake8]
 recipe = zc.recipe.egg
 eggs =
     flake8
+arguments = [
+    '--ignore=E501,E711,E712,E722,N80,N81',
+    '--max-complexity=10',
+    ] + sys.argv[1:]
+
+[autopep8]
+recipe = zc.recipe.egg
+eggs =
     autopep8
+arguments = [
+    'fakearg',
+    '--ignore=E501,E711,E712',
+    ] + sys.argv[1:]
 
 [i18n]
 recipe = zc.recipe.egg
@@ -50,3 +71,6 @@ eggs =
 
 [install-links]
 prefix = /opt/local
+
+[sources]
+i18ndude.autotranslate = git https://github.com/FBruynbroeck/i18ndude.autotranslate.git
