--- a/versions.cfg
+++ b/versions.cfg
@@ -58,3 +58,11 @@ six = 1.11.0
 # Required by:
 # html5lib==1.0.1
 webencodings = 0.5.1
+
+# Required by:
+# bs4==0.0.1
+beautifulsoup4 = 4.6.0
+
+# Required by:
+# i18ndude.autotranslate==0.1.dev0
+bs4 = 0.0.1
