Add flake8-debugger extension

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -33,6 +33,7 @@ eggs =
 recipe = zc.recipe.egg
 eggs =
     flake8
+    flake8-debugger
 arguments = [
     '--ignore=E501,E711,E712,E722,N80,N81',
     '--max-complexity=10',
