Add fullrelease.sh (from old git.scripts repo)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -16,6 +16,7 @@ parts =
     mrbob
     releaser
     manifest
+    scripts
     ${buildout:links-parts}
 
 show-picked-versions = true
@@ -72,6 +73,10 @@ eggs =
 
 [install-links]
 prefix = /opt/local
+
+[scripts]
+recipe = zc.recipe.egg:scripts
+eggs = python.tools
 
 [sources]
 i18ndude.autotranslate = git https://github.com/FBruynbroeck/i18ndude.autotranslate.git
