--- a/versions.cfg
+++ b/versions.cfg
@@ -6,6 +6,7 @@ certifi = 2018.1.18
 chardet = 3.0.4
 collective.recipe.template = 2.0
 docutils = 0.14
+gitdb2 = 2.0.3
 html5lib = 1.0.1
 idna = 2.6
 mccabe = 0.6.1
@@ -17,6 +18,7 @@ pyroma = 2.3
 readme-renderer = 17.2
 requests = 2.18.4
 requests-toolbelt = 0.8.0
+smmap2 = 2.0.3
 tqdm = 4.19.5
 twine = 1.9.1
 urllib3 = 1.22
@@ -66,3 +68,7 @@ beautifulsoup4 = 4.6.0
 # Required by:
 # i18ndude.autotranslate==0.1.dev0
 bs4 = 0.0.1
+
+# Required by:
+# python.tools==0.1.dev0
+GitPython = 2.1.10
